--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,26 @@
 {
-    "name" : "poster",
-    "appid" : "__UNI__A33689F",
+    "name" : "poster 2.0",
+    "appid" : "__UNI__55A4A04",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
+    /* 5+App特有相关 */
     "app-plus" : {
+        "usingComponents" : true,
         "nvueCompiler" : "uni-app",
         "compilerVersion" : 3,
+        "splashscreen" : {
+            "alwaysShowBeforeRender" : true,
+            "waiting" : true,
+            "autoclose" : true,
+            "delay" : 0
+        },
+        /* 模块配置 */
         "modules" : {},
+        /* 应用发布信息 */
         "distribute" : {
+            /* android打包配置 */
             "android" : {
                 "permissions" : [
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
@@ -36,19 +47,34 @@
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ]
             },
+            /* ios打包配置 */
             "ios" : {},
+            /* SDK配置 */
             "sdkConfigs" : {}
         }
     },
+    /* 快应用特有相关 */
     "quickapp" : {},
+    /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wxb593c4c3d8bea11c",
         "setting" : {
-            "urlCheck" : true,
-            "es6" : true,
+            "urlCheck" : false,
             "postcss" : true,
-            "minified" : true
+            "es6" : true
         },
-        "permission" : {}
+        "usingComponents" : true
+    },
+    "mp-alipay" : {
+        "usingComponents" : true
+    },
+    "mp-baidu" : {
+        "usingComponents" : true
+    },
+    "mp-toutiao" : {
+        "usingComponents" : true
+    },
+    "uniStatistics" : {
+        "enable" : false
     }
 }
